fixed ordered list

--- a/khyle.html
+++ b/khyle.html
@@ -54,12 +54,16 @@
         <div container class="activities__content">
           <h2 class="activities__title">Activity 1-6</h2>
           <p><h2>ACT 1</h2></p>
-          <h1>VICTORINO 1</h1> 
-          <h2>VICTORINO 2</h2> 
-          <h3>VICTORINO 3</h3> 
-          <h4>VICTORINO 4</h4> 
-          <h5>VICTORINO 5</h5> 
-          <h6>VICTORINO 6</h6>
+          <br>
+          
+            <ul>
+            <li><h1>VICTORINO 1</h1></li>
+            <li><h2>VICTORINO 2</h2></li>
+            <li><h3>VICTORINO 3</h3></li>
+            <li><h4>VICTORINO 4</h4></li>
+            <li><h5>VICTORINO 5</h5></li>
+            <li><h6>VICTORINO 6</h6></li>
+            </ul>
           
           <p><h2>ACT 2</h2></p>
             <p>FIRST PARAGRAPH</p> <p>SECOND PARAGRAPH</p> <p>THIRD PARAGRAPH</p> 
