--- a/khyle.html
+++ b/khyle.html
@@ -111,7 +111,7 @@
 		
 		<p><h2>ACT 9</h2></p> 
 		<p> A Link Opening a Website</p>
-		<p>Click following link</p> <a href = https://www.yamaha-motor.com.ph>YAMAHA</a> 
+		<p>Click following link</p> <a class="hero__btn btn"  href = https://www.yamaha-motor.com.ph>YAMAHA</a> 
         
 		<p><h2>ACT 10</h2></p>
 		<font size = "1">VICTORINO = "1"</font><br />
@@ -145,10 +145,10 @@
 	    <address>San Miguel, Pasig City -  Hyderabad</address>
 
 		<p><h2>ACT 16-22</h2></p>
-		<a href = "https://www.yamaha-motor.com.ph/" target = "_self"> 
+		<a class="hero__btn btn"  href = "https://www.yamaha-motor.com.ph/" target = "_self"> 
         <img src = "SR.jpg" alt = "Arellano University" width = "450" height = "300" border = "0" align = "left" />
 
-        <a href = "https://www.yamaha-motor.com.ph/" target = "_blank">YAMAHA</a> |
+        <a class="hero__btn btn"  href = "https://www.yamaha-motor.com.ph/" target = "_blank">YAMAHA</a> |
 		<marquee><h2>SNIPER 155<h2></marquee>
         </a>
         </div>
