fixed image link

--- a/khyle.html
+++ b/khyle.html
@@ -145,10 +145,10 @@
 	    <address>San Miguel, Pasig City -  Hyderabad</address>
 
 		<p><h2>ACT 16-22</h2></p>
-		<a class="hero__btn btn"  href = "https://www.yamaha-motor.com.ph/" target = "_self"> 
+		<a href = "https://www.yamaha-motor.com.ph/" target = "_self"> 
         <img src = "SR.jpg" alt = "Arellano University" width = "450" height = "300" border = "0" align = "left" />
 
-        <a class="hero__btn btn"  href = "https://www.yamaha-motor.com.ph/" target = "_blank">YAMAHA</a> |
+        <a class="hero__btn btn"  href = "https://www.yamaha-motor.com.ph/" target = "_blank">YAMAHA</a> 
 		<marquee><h2>SNIPER 155<h2></marquee>
         </a>
         </div>
