added table activity

--- a/khyle.html
+++ b/khyle.html
@@ -173,7 +173,63 @@
       <section class="schoolworks container">
         <h2 class="schoolworks__title">My Calendar Project</h2>
         <div class="schoolworks__content">
-          <img src="calendar.JPG" alt="Compilation of Schoolworks" width="600">
+            <h1>KHYLE JEANVHER C. VICTORINO</h1>
+            <h2>JANUARY 2025</h2>
+            <table align="center" width="100%" background = "ZODIAC.jpg">
+              <tr>
+                <th>Sunday</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th>Saturday</th>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td><font color="RED"><b>1</b><br>NEW YEAR's DAY</font></td>
+                <td><font color="WHITE">2</font></td>
+                <td><font color="WHITE">3</font></td>
+                <td><font color="WHITE">4</font></td>
+              </tr>
+              <tr>
+                <td><font color="WHITE">5</font></td>
+                <td><font color="WHITE">6</font></td>
+                <td><font color="WHITE">7</font></td>
+                <td><font color="GOLD"><b>8</b><br>BIRTHDAY</font></td>
+              <td><font color="WHITE">9</font></td>
+                <td><font color="WHITE">10</font></td>
+                <td><font color="WHITE">11</font></td>
+              </tr>
+              <tr>
+                <td><font color="WHITE">12</font></td>
+                <td><font color="WHITE">13</font></td>
+                <td><font color="WHITE">14</font></td>
+                <td><font color="WHITE">15</font></td>
+              <td><font color="WHITE">16</font></td>
+                <td><font color="WHITE">17</font></td>
+                <td><font color="WHITE">18</font></td>
+              </tr>
+              <tr>
+                <td><font color="WHITE">19</font></td>
+                <td><font color="WHITE">20</font></td>
+                <td><font color="WHITE">21</font></td>
+                <td><font color="WHITE">22</font></td>
+              <td><font color="WHITE">23</font></td>
+                <td><font color="WHITE">24</font></td>
+                <td><font color="WHITE">25</font></td>
+              </tr>
+              <tr>
+                <td><font color="WHITE">26</font></td>
+                <td><font color="WHITE">27</font></td>
+                <td><font color="RED"><b>28</b><br>LUNAR NEW YEAR</font></td>
+                <td><font color="WHITE">29</font></td>
+              <td><font color="WHITE">30</font></td>
+                <td><font color="WHITE">31</font></td>
+              </tr>
+            </table>
         </div>
         <p>
           This project was one of my exercises to practice working with tables, text formatting, and basic webpage structure.
