--- a/khyle.html
+++ b/khyle.html
@@ -172,9 +172,9 @@
       <hr>
       <section class="schoolworks container">
         <h2 class="schoolworks__title">My Calendar Project</h2>
-        <div class="schoolworks__content">
-            <h1>KHYLE JEANVHER C. VICTORINO</h1><br>
-            <h2>JANUARY 2025</h2><br>
+        <div class="activities__content">
+            <h1>KHYLE JEANVHER C. VICTORINO</h1>
+            <h2>JANUARY 2025</h2>
             <table align="center" width="100%" background = "ZODIAC.jpg">
               <tr>
                 <th>Sunday</th>
