--- a/arcalas.html
+++ b/arcalas.html
@@ -99,7 +99,7 @@
 		<hr>
 		<!-- Act 9: Hyperlink Example -->
 		<p> A Link Opening a Website</p>
-		<p>Click following link</p> <a href = https://www.youtube.com/watch?v=8RDg8kJOg-Q>TAYLOR SWIFT 		SONG PLAYLIST</a> 
+		<p>Click following link</p> <a href = "https://www.youtube.com/watch?v=8RDg8kJOg-Q">TAYLOR SWIFT 		SONG PLAYLIST</a> 
 		<p> A Link Opening a Webpage</p>
 		<p>Click following link</p> <a href = "Act1.html">Open HTML 		Activity No. 1</a> 
 		
@@ -182,7 +182,7 @@
        <a href = "https://www.youtube.com/watch?v=HOdOo5Tm6NI" target = "_blank">Opens in New</a> |
        <a href = "https://www.youtube.com/watch?v=wdUUfvkMm-c" target = "_self">Opens in Self</a> |
        <a href = "https://www.youtube.com/watch?v=18NawsJUFWU" target = "_parent">Opens in Parent</a> |
-       <a href = https://www.youtube.com/watch?v=8RDg8kJOg-Q" target = "_top">Opens in Body</a>
+       <a href = "https://www.youtube.com/watch?v=8RDg8kJOg-Q" target = "_top">Opens in Body</a>
      
      <hr>
      
