--- a/arcalas.html
+++ b/arcalas.html
@@ -99,9 +99,8 @@
 		<hr>
 		<h1>ACTIVITY 9</h1>
 		<p> A Link Opening a Website</p>
-		<p>Click following link</p> class="hero__btn btn" <a href = "https://www.youtube.com/watch?v=8RDg8kJOg-Q">TAYLOR SWIFT 		SONG PLAYLIST</a> 
-		<p> A Link Opening a Webpage</p>
-		<p>Click following link</p> <a href = "Act1.html">Open HTML 		Activity No. 1</a> 
+		<p>Click following link</p> <a  class="hero__btn btn" href = "https://www.youtube.com/watch?v=8RDg8kJOg-Q">TAYLOR SWIFT 		SONG PLAYLIST</a> 
+	
 		
 		<hr>
 		<h1>ACTIVITY 10</h1>
