fixed table alignment

--- a/arcalas.html
+++ b/arcalas.html
@@ -204,13 +204,14 @@
    FLORENCE ARCALAS<marquee VSPACE=50 bgcolor=GREEN>LOREN NATSUMI</marquee>
    FLORENCE ARCALAS<marquee HSPACE=50 bgcolor=SKYBLUE>LOREN NATSUMI</marquee>
             </section>
+          </div>
         <hr>
         <section class="schoolworks container">
             <h2 class="schoolworks__title">My Calendar Project</h2>
             <div class="activities__content">
               <h1>Florence Abby Clear V. Arcalas</h1>
               <h2>September 2025</h2>
-              <table class="calendar-table" align="center" width="80%" bgcolor="lavender">
+              <table class="calendar-table" width="80%" bgcolor="lavender">
                 <tr>
                   <th class="calendar-header">Sunday</th>
                   <th class="calendar-header">Monday</th>
@@ -264,8 +265,10 @@
                   <td class="calendar-cell"></td>
                   <td class="calendar-cell"></td>
         </div>
+        <br>
+      </section>
         <p class="hero__description">
-          Hi! I'm a first-year BSIT student, and this is a screenshot of a simple calendar webpage I created using HTML.
+          Hi! I'm a first-year BSIT student, and this is a simple calendar webpage I created using HTML.
           <br>
           This project was one of my exercises to practice working with tables, text formatting, and basic webpage structure.
           <br>
@@ -279,7 +282,7 @@
           <br>
           It's one of my first steps in learning web development, and I'm excited to build more interactive and visually appealing pages in the future!
         </p>
-      </section>
+      
     <footer class="footer">
       <div class="footer__content">
         <div class="footer__links">
