--- a/arcalas.html
+++ b/arcalas.html
@@ -206,7 +206,7 @@
             </section>
           </div>
         <hr>
-        <section class="schoolworks container">
+        <section>
             <h2 class="schoolworks__title">My Calendar Project</h2>
             <div class="activities__content">
               <h1>Florence Abby Clear V. Arcalas</h1>
@@ -265,6 +265,7 @@
                   <td class="calendar-cell"></td>
                   <td class="calendar-cell"></td>
         </div>
+      </div>
         <br>
       </section>
         <p class="hero__description">
@@ -288,12 +289,9 @@
         <div class="footer__links">
           <a href="#">Back to top</a>
         </div>
-        
-      </div>
+        </div>
     </footer>  
     <div id="app"></div>
-    
-    <script type="module" src="src/utils/carousel.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
