--- a/arcalas.html
+++ b/arcalas.html
@@ -207,83 +207,84 @@
           </div>
         <hr>
         <section>
-            <h2 class="schoolworks__title">My Calendar Project</h2>
-            <div class="activities__content">
-              <h1>Florence Abby Clear V. Arcalas</h1>
-              <h2>September 2025</h2>
-              <table class="calendar-table" width="80%" bgcolor="lavender">
-                <tr>
-                  <th class="calendar-header">Sunday</th>
-                  <th class="calendar-header">Monday</th>
-                  <th class="calendar-header">Tuesday</th>
-                  <th class="calendar-header">Wednesday</th>
-                  <th class="calendar-header">Thursday</th>
-                  <th class="calendar-header">Friday</th>
-                  <th class="calendar-header">Saturday</th>
-                </tr>
-                <tr>
-                  <td class="calendar-cell"></td>
-                  <td class="calendar-cell">1</td>
-                  <td class="calendar-cell">2</td>
-                  <td class="calendar-cell">3</td>
-                  <td class="calendar-cell">4</td>
-                  <td class="calendar-cell">5</td>
-                  <td class="calendar-cell">6</td>
-                </tr>
-                <tr>
-                  <td class="calendar-cell">7</td>
-                  <td class="calendar-cell">8</td>
-                  <td class="calendar-cell">9</td>
-                  <td class="calendar-cell">10</td>
-                  <td class="calendar-cell">11</td>
-                  <td class="calendar-cell">12</td>
-                  <td class="calendar-cell">13</td>
-                </tr>
-                <tr>
-                  <td class="calendar-cell">14</td>
-                  <td class="calendar-cell">15</td>
-                  <td class="calendar-cell">16</td>
-                  <td class="calendar-cell"><font color="sky blue"> <b>17</b><br>My Birthday</font></td>
-                  <td class="calendar-cell">18</td>
-                  <td class="calendar-cell">19</td>
-                  <td class="calendar-cell">20</td>
-                </tr>
-                <tr>
-                  <td class="calendar-cell">21</td>
-                  <td class="calendar-cell">22</td>
-                  <td class="calendar-cell">23</td>
-                  <td class="calendar-cell">24</td>
-                  <td class="calendar-cell">25</td>
-                  <td class="calendar-cell">26</td>
-                  <td class="calendar-cell">27</td>
-                </tr>
-                <tr>
-                  <td class="calendar-cell">28</td>
-                  <td class="calendar-cell">29</td>
-                  <td class="calendar-cell">30</td>
-                  <td class="calendar-cell"></td>
-                  <td class="calendar-cell"></td>
-                  <td class="calendar-cell"></td>
-        </div>
-      </div>
-        <br>
-      </section>
-        <p class="hero__description">
-          Hi! I'm a first-year BSIT student, and this is a simple calendar webpage I created using HTML.
-          <br>
-          This project was one of my exercises to practice working with tables, text formatting, and basic webpage structure.
-          <br>
-          The calendar displays the month of September 2025 and includes important dates like:
-          <br>
-          <strong>September 17 – My Birthday 🎉</strong>
-          <br>
-          I used a table to organize the days of the week, styled the headers with a purple background and bold white text, and added a light lavender shade for the date cells to improve clarity and visual appeal.
-          <br>
-          This project helped me understand how to use HTML tags like <code>&lt;table&gt;</code>, <code>&lt;tr&gt;</code>, and <code>&lt;td&gt;</code>, as well as how to apply simple inline CSS for layout and styling.
-          <br>
-          It's one of my first steps in learning web development, and I'm excited to build more interactive and visually appealing pages in the future!
-        </p>
-      
+          <h2 class="schoolworks__title">My Calendar Project</h2>
+          <div class="activities__content">
+            <h1>Florence Abby Clear V. Arcalas</h1>
+            <h2>September 2025</h2>
+            <table class="calendar-table" width="80%" bgcolor="lavender">
+              <tr>
+                <th class="calendar-header">Sunday</th>
+                <th class="calendar-header">Monday</th>
+                <th class="calendar-header">Tuesday</th>
+                <th class="calendar-header">Wednesday</th>
+                <th class="calendar-header">Thursday</th>
+                <th class="calendar-header">Friday</th>
+                <th class="calendar-header">Saturday</th>
+              </tr>
+              <tr>
+                <td class="calendar-cell"></td>
+                <td class="calendar-cell">1</td>
+                <td class="calendar-cell">2</td>
+                <td class="calendar-cell">3</td>
+                <td class="calendar-cell">4</td>
+                <td class="calendar-cell">5</td>
+                <td class="calendar-cell">6</td>
+              </tr>
+              <tr>
+                <td class="calendar-cell">7</td>
+                <td class="calendar-cell">8</td>
+                <td class="calendar-cell">9</td>
+                <td class="calendar-cell">10</td>
+                <td class="calendar-cell">11</td>
+                <td class="calendar-cell">12</td>
+                <td class="calendar-cell">13</td>
+              </tr>
+              <tr>
+                <td class="calendar-cell">14</td>
+                <td class="calendar-cell">15</td>
+                <td class="calendar-cell">16</td>
+                <td class="calendar-cell">
+                  <font color="sky blue"><b>17</b><br>My Birthday</font>
+                </td>
+                <td class="calendar-cell">18</td>
+                <td class="calendar-cell">19</td>
+                <td class="calendar-cell">20</td>
+              </tr>
+              <tr>
+                <td class="calendar-cell">21</td>
+                <td class="calendar-cell">22</td>
+                <td class="calendar-cell">23</td>
+                <td class="calendar-cell">24</td>
+                <td class="calendar-cell">25</td>
+                <td class="calendar-cell">26</td>
+                <td class="calendar-cell">27</td>
+              </tr>
+              <tr>
+                <td class="calendar-cell">28</td>
+                <td class="calendar-cell">29</td>
+                <td class="calendar-cell">30</td>
+                <td class="calendar-cell"></td>
+                <td class="calendar-cell"></td>
+                <td class="calendar-cell"></td>
+              </tr>
+            </table>
+          </div>
+          <p class="hero__description">
+            Hi! I'm a first-year BSIT student, and this is a simple calendar webpage I created using HTML.
+            <br>
+            This project was one of my exercises to practice working with tables, text formatting, and basic webpage structure.
+            <br>
+            The calendar displays the month of September 2025 and includes important dates like:
+            <br>
+            <strong>September 17 – My Birthday 🎉</strong>
+            <br>
+            I used a table to organize the days of the week, styled the headers with a purple background and bold white text, and added a light lavender shade for the date cells to improve clarity and visual appeal.
+            <br>
+            This project helped me understand how to use HTML tags like <code>&lt;table&gt;</code>, <code>&lt;tr&gt;</code>, and <code>&lt;td&gt;</code>, as well as how to apply simple inline CSS for layout and styling.
+            <br>
+            It's one of my first steps in learning web development, and I'm excited to build more interactive and visually appealing pages in the future!
+          </p>
+        </section>
     <footer class="footer">
       <div class="footer__content">
         <div class="footer__links">
