added section class

--- a/arcalas.html
+++ b/arcalas.html
@@ -206,7 +206,7 @@
             </section>
           </div>
         <hr>
-        <section>
+        <section class="schoolworks container">
           <h2 class="schoolworks__title">My Calendar Project</h2>
           <div class="activities__content">
             <h1>Florence Abby Clear V. Arcalas</h1>
