fixed image path

--- a/diego.html
+++ b/diego.html
@@ -120,7 +120,7 @@
 
     <h2>ACT 18</h2>
     <p>Setting image Border</p>
-      <img src = cloud.png	  " alt = "cloud.png" border = "3"/>
+      <img src = "cloud.png" alt = "cloud.png" border = "3"/>
 
     <h2>ACT 19</h2>
     <p>Setting image Alignment</p>
