--- a/diego.html
+++ b/diego.html
@@ -129,7 +129,7 @@
     <h2>ACT 20</h2>
     <p>Click following link</p>
     <a href = "https://www.pickup-coffee.com/" target = "_self"> 
-    <img src = "cloud.png" alt =  border = "0"/> 
+    <img src = "cloud.png" alt ="cloud"  border = "0"/> 
 
     <h2>ACT 21</h2>
     <p>Click any of the following links</p>
