fixed image path

--- a/diego.html
+++ b/diego.html
@@ -39,7 +39,7 @@
             <h2 class="schoolworks__title">Compilation of Activities</h2>
             <p class="hero__description">Hello if I forgot to introduce myself, my name is <Strong>Irish Mae Diego.</Strong></p>
         </div>
-        <div container class="activities__content">
+        <div class="activities__content">
           <h2 class="activities__title">Activity 1-24</h2>
           <p><h2>ACT 1</h2></p>
           <h1>BS- IT </h1> 
@@ -124,7 +124,7 @@
 
     <h2>ACT 19</h2>
     <p>Setting image Alignment</p>
-    <img src = "cloud. png" alt = "cloud.png" border = "3" align = "right"/>
+    <img src = "cloud.png" alt = "cloud.png" border = "3" align = "right"/>
 
     <h2>ACT 20</h2>
     <p>Click following link</p>
